# ROS

./: README.md  readme.md
src/cs4750_student/final_projects/arm_final_project/: CMakeLists.txt  package.xml
src/cs4750_student/final_projects/arm_final_project/launch/: env.launch  robot_description.launch  start.launch
src/cs4750_student/final_projects/arm_final_project/rviz/: airport.rviz
src/cs4750_student/final_projects/arm_final_project/scene/: airport.scene  can.dae  can.stl  trash.dae  tray.dae  tray.stl
src/cs4750_student/final_projects/arm_final_project/scripts/: airport
src/cs4750_student/final_projects/arm_final_project/src/arm_final_project/: fake_grasping.py  init_env.py  planning_context.py
src/cs4750_student/final_projects/car_final_project/: CMakeLists.txt  package.xml  setup.py
src/cs4750_student/final_projects/car_final_project/config/: planning.rviz  waypoints.json
src/cs4750_student/final_projects/car_final_project/launch/: start_bot.launch
src/cs4750_student/final_projects/car_final_project/scripts/: planner  sequence.json  surveillance_bot
src/cs4750_student/final_projects/car_final_project/src/car_final_project/: planner_ros.py
src/cs4750_student/hw1_introduction/: CMakeLists.txt  hw1.md  package.xml  setup.py
src/cs4750_student/hw1_introduction/launch/: path_publisher.launch  prime_number.launch
src/cs4750_student/hw1_introduction/plans/: crown.txt  figure_8.txt  straight_line.txt
src/cs4750_student/hw1_introduction/scripts/: pose_listener  prime_number
src/cs4750_student/hw1_introduction/src/introduction/: listener.py  prime_number.py
src/cs4750_student/hw1_introduction/test/: path_publisher.test  pose_listener.test  prime_number_small.test  test_norms.py  test_path_publisher.py  test_pose_listener.py  test_prime_number.py  test_prime_number_small.py
src/cs4750_student/hw1_introduction/writeup/: README.md
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/: CMakeLists.txt  README
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/config/: wx250s.urdf.xacro
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/launch/: fk.launch
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/nodes/: fk_broadcaster_node
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/rviz/: hw2_2_arm_fk.rviz
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/src/arm_kinematics/: fk_broadcaster.py
src/cs4750_student/hw2_kinematics/arm_kinematics_sol/test/: forward_kinematics.py
src/cs4750_student/hw2_kinematics/car_kinematics/: README.md  package.xml  setup.py
src/cs4750_student/hw2_kinematics/car_kinematics/config/: parameters.yaml
src/cs4750_student/hw2_kinematics/car_kinematics/scripts/: make_motion_model_plot
src/cs4750_student/hw2_kinematics/car_kinematics/src/car_kinematics/: kinematic_model.py
src/cs4750_student/hw2_kinematics/car_kinematics/test/: kinematic_model.py
src/cs4750_student/hw2_kinematics/car_kinematics_sol/: CMakeLists.txt
src/cs4750_student/hw2_kinematics/car_kinematics_sol/config/: parameters.yaml
src/cs4750_student/hw2_kinematics/car_kinematics_sol/scripts/: make_motion_model_plot
src/cs4750_student/hw2_kinematics/car_kinematics_sol/src/car_kinematics/: kinematic_model.py
src/cs4750_student/hw3_state_estimation/car_state_estimation/: CMakeLists.txt
src/cs4750_student/hw3_state_estimation/car_state_estimation/config/: localization.rviz  parameters.yaml  student.yaml
src/cs4750_student/hw3_state_estimation/car_state_estimation/launch/: particle_filter_sim.launch  particle_filter_teleop_sim.launch
src/cs4750_student/hw3_state_estimation/car_state_estimation/launch/include/: particle_filter 2.xml
src/cs4750_student/hw3_state_estimation/car_state_estimation/src/localization/: motion_model.py  particle_filter.py  sensor_model.py
src/cs4750_student/hw3_state_estimation/car_state_estimation/test/: particle_filter.py  particle_filter.test  particle_initializer.py
src/cs4750_student/hw3_state_estimation/car_state_estimation/writeup/: README.md
src/cs4750_student/hw4_planning/arm_planning/: CMakeLists.txt
src/cs4750_student/hw4_planning/arm_planning/map/: roadmap_joint_space.pkl
src/cs4750_student/hw4_planning/arm_planning/meshes/: bugatti.scene  panel.dae  table.stl
src/cs4750_student/hw4_planning/arm_planning/test/: custom_distance_rrt.py  problems_arm.py
src/cs4750_student/hw4_planning/car_planning/: CMakeLists.txt  setup.py
src/cs4750_student/hw4_planning/car_planning/config/: maze_0_se2_halton_1000_10.0_1.0.pkl  planning.rviz
src/cs4750_student/hw4_planning/car_planning/launch/: planner_sim.launch
src/cs4750_student/hw4_planning/car_planning/scripts/: planner
src/cs4750_student/hw4_planning/car_planning/src/car_planning/: planner_ros.py
src/cs4750_student/hw4_planning/planning/: CMakeLists.txt
src/cs4750_student/hw4_planning/planning/launch/: make_roadmap.launch
src/cs4750_student/hw4_planning/planning/src/planning/: RRTTree.py  (+5 more)
src/cs4750_student/hw4_planning/planning/test/: astar.py  problems.py  roadmap.py  rrt.py  rrt_shortcut.py
src/cs4750_student/hw4_planning/planning/writeup/: README.md
src/cs4750_student/hw5_control/arm_controller/: CMakeLists.txt
src/cs4750_student/hw5_control/arm_controller/config/: controller.rviz
src/cs4750_student/hw5_control/arm_controller/launch/: robot_description.launch  run_controller.launch
src/cs4750_student/hw5_control/arm_controller/test/: pid.py
src/cs4750_student/hw5_control/car_controller/: CMakeLists.txt  package.xml  setup.py
src/cs4750_student/hw5_control/car_controller/config/: control.rviz  control_juggler.xml  parameters.yaml
src/cs4750_student/hw5_control/car_controller/launch/: controller.launch  controller_sim.launch  plotjuggler.launch
src/cs4750_student/hw5_control/car_controller/scripts/: control_node  path_sender
src/cs4750_student/hw5_control/car_controller/srv/: FollowPath.srv
src/cs4750_student/hw5_control/car_controller/test/: controller.py  controller_performance.py  controller_performance.test  mpc.py  pid.py
src/cs4750_student/hw5_control/car_controller/writeup/: README.md
(+410 files in other folders)
