<?xml version="1.0"?>
<package format="3">
  <name>car_kinematics</name>
  <version>1.0.0</version>
  <description>CSE 4750 Car Kinematics Project</description>

  <author>Rishabh Madan</author>

  <maintainer email="rm773@cornell.edu">CS 4750 Teaching Staff</maintainer>

  <license>Educational Use Only</license>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cs4750</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mushr_sim</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vesc_msgs</exec_depend>

  <export>

  </export>
</package>
